fixed height when blurred

--- a/src/pages/SucculentCourse.module.css
+++ b/src/pages/SucculentCourse.module.css
@@ -353,7 +353,6 @@
   position: relative;
   background-color: #f3f4d3;
   width: 100%;
-  height: 2290px;
   overflow: hidden;
   text-align: left;
   font-size: 16px;
